--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 /* h2字体设置 */
-h2 span{
+/* h2 span{
     display:inline-block;
     background: rgb(176,224,230);
     color:#B0E0E6;
@@ -17,7 +17,7 @@ h2 span{
     border-radius:5px;
     box-shadow: 1px 1px 3px pink;
     font-size: 22px;
-}
+} */
 
 /* h3字体设置 */
 h3 span{
@@ -35,7 +35,7 @@ h3 span{
 }
 
 /* 以下是侧边栏(自定义) */
-aside.sidebar ul li {
+/* aside.sidebar ul li {
     margin: 0;
     position: relative;
 }
@@ -52,13 +52,13 @@ aside.sidebar ul li p {
 
 aside.sidebar ul li a {
     line-height: 35px;
-    font-size: 16px;    /* 侧边栏字体大小 */
+    font-size: 16px;    
     padding: 3px 0 3px 22px;
 }
 
 aside.sidebar ul li.active > a {
     font-size: 16px !important;
-}
+} */
 
 aside.sidebar ul li.active > a:before {
     content: '' !important;
@@ -71,7 +71,7 @@ aside.sidebar ul li.active > a:before {
     border-radius: 50% !important;
     background-color: #fed24a !important;
     box-shadow: 0 0 0 3px rgba(254, 210, 74, 0.4) !important;
-}
+} */
 
 /*滚动条样式 start*/
 /* 滚动条宽度 */
@@ -136,10 +136,10 @@ aside.sidebar ul li.active > a:before {
 }
 
 /* 代码块 */
-.markdown-section pre:before {
+/* .markdown-section pre:before {
     content: '';
     display: block;
-    background: url(https://cdn.jsdelivr.net/gh/zxiaosi/cdn/Docsify/images/point.png);
+    background: url(https://sm.ms/image/5wPVhKIskcMiR1f); 
     height: 30px;
     width: 100%;
     background-size: 40px;
@@ -147,10 +147,10 @@ aside.sidebar ul li.active > a:before {
     background-color: #282c34;
     margin-bottom: -7px;
     margin-top: 10px;
-    margin-left: -3px;
+    margin-left: -px;
     border-radius: 5px;
     background-position: 10px 10px;
-}
+} */
 /* 代码块 */
 .markdown-section pre>code {
     color: #c0c3c1 !important;
@@ -166,7 +166,7 @@ aside.sidebar ul li.active > a:before {
 }
 /* 代码块 */
 markdown-section code, .markdown-section pre {
-    background-color: #282c34;
+    /* background-color: #282c34; */
 }
 .token.directive.keyword{
     color: #4faee2 !important;
