--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ aside.sidebar ul li.active > a:before {
 .markdown-section pre>code {
     color: #c0c3c1 !important;
     font-family: 'Inconsolata', consolas,"PingFang SC", "Microsoft YaHei", monospace !important;
-    background-color: #282c34 !important;    
+    /* background-color: #282c34 !important;     */
     font-size: 15px !important;
     white-space: pre !important;
     line-height: 1.5 !important;
