--- a/css/custom.css
+++ b/css/custom.css
@@ -36,6 +36,12 @@ h2 span{
     /* font-size: 22px; */
 }
 
+h3 span{
+    display: block;
+    padding: 8px 12px;
+    box-shadow:  1px 1px 3px#53b5d9;
+}
+
 /* h3字体设置 */
 /* h3 span{
     font-size: 18px;
@@ -77,7 +83,7 @@ aside.sidebar ul li.active > a {
     font-size: 16px !important;
 } */
 
-aside.sidebar ul li.active > a:before {
+/* aside.sidebar ul li.active > a:before {
     content: '' !important;
     position: absolute !important;
     margin: 0 !important;
@@ -88,7 +94,7 @@ aside.sidebar ul li.active > a:before {
     border-radius: 50% !important;
     background-color: #fed24a !important;
     box-shadow: 0 0 0 3px rgba(254, 210, 74, 0.4) !important;
-} 
+}  */
 
 /*滚动条样式 start*/
 
@@ -124,7 +130,12 @@ background-image: -webkit-linear-gradient(45deg, #77c85a 25%, #03a9f4 25%, #9755
 .markdown-section strong {
     /* color: rgb(0,123,232) !important; */
     color: #1E90FF !important;
-    font-weight: bolder;
+    font-weight: bolder !important;
+}
+
+/* 斜体 */
+.markdown-section em {
+    color: palevioletred !important;
 }
 
 /* a 标签 */
@@ -174,13 +185,13 @@ background-image: -webkit-linear-gradient(45deg, #77c85a 25%, #03a9f4 25%, #9755
     content: "🍒";
 } */
 /* 代码块 */
-/* .markdown-section pre {
+.markdown-section pre {
     box-shadow: 2px 2px 20px 6px #ddd !important;
 }
 
 /* 代码块 */
-/* .markdown-section pre:before {
-    content: '';
+.markdown-section pre:before {
+    /* content: '';
     display: block;
     background: url(https://sm.ms/image/5wPVhKIskcMiR1f); 
     height: 30px;
@@ -192,24 +203,48 @@ background-image: -webkit-linear-gradient(45deg, #77c85a 25%, #03a9f4 25%, #9755
     margin-top: 10px;
     margin-left: -px;
     border-radius: 5px;
-    background-position: 10px 10px;
-} */
+    background-position: 10px 10px; */
+    content: "";
+    position: absolute !important;
+    -webkit-border-radius: 50% !important;
+    border-radius: 50% !important;
+    background: #fc625d !important;
+    width: 12px !important;
+    height: 12px !important;
+    left: 12px;
+    margin-top: 15px;
+    -webkit-box-shadow: 20px 0 #fdbc40,40px 0 #35cd4b !important;
+    box-shadow: 20px 0 #fdbc40,40px 0 #35cd4b !important;
+    z-index: 2;
+}
 /* 代码块 */
 .markdown-section pre>code {
-    /* color: #c0c3c1 !important; */
+    /* color: #c0c3c1 !important;
     font-family: 'Inconsolata', consolas,"PingFang SC", "Microsoft YaHei", monospace !important;
-    /* background-color: #282c34 !important;     */
+    background-color: #282c34 !important;    
     font-size: 15px !important;
     white-space: pre !important;
     line-height: 1.5 !important;
     -moz-tab-size: 4 !important;
     -o-tab-size: 4 !important;
-    tab-size: 4 !important;
-
+    tab-size: 4 !important; */
+    background-color: #312d2d !important ;
+    color: #fafafad7 !important ;
+    padding: 32px 16px 18px 16px !important;
+    overflow-x: auto !important;
+    font-size: 16px;
+    position: relative !important;
+    border-radius: 5px;
+    line-height: 1.6;
+    margin-bottom: 1.6em;
+    max-width: 100%;
+    overflow: auto !important;
+    text-shadow: none !important;
+    box-shadow: 0 10px 30px 0px #312d2d !important;
 }
 /* 代码块 */
 markdown-section code, .markdown-section pre {
-    background-color: #282c34;
+    background-color: #312d2d !important;
 }
 .token.directive.keyword{
     color: #4faee2 !important;
@@ -226,7 +261,6 @@ markdown-section code, .markdown-section pre {
 .token.tag{
     color: #a589ad !important;
 }
-
 
 .token.attr-name{
     color: #de916c !important;
