--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,7 @@
 }
 
 .cover{
-    background: url(/shoot.jpg)no-repeat center center fixed!important;
+    background: url(shoot.jpg)no-repeat center center fixed!important;
     background-size: 100% 120% !important;
     
 }
